# Plume_Tracing_UUV_Sim

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: waypoints.yaml
launch/: eca_a9_geometric_traj_control.launch  multi_bot_controller.launch  multi_rov_test.launch  plume_tracing.launch  robot_plume_demo.launch  send_waypoints.launch  start_plume.launch  start_plume_example.launch  start_pt_environ.launch  test.launch  tutorial_dp_controller.launch  tutorial_dp_controller_demo.launch  waypoints_plume.launch
rviz/: everything.rviz  multibot.rviz  multiecaa9.rviz  plume_example.rviz  test.rviz
scripts/: set_currvel  turbulent_plume  tutorial_dp_controller.py
src/: cptbbp.py  multi_bot_testing.py
