<?xml version="1.0"?>
<package format="2">
  <name>pt_uuvsim</name>
  <version>0.0.0</version>
  <description>Plume tracing for UUV simulator</description>

  <maintainer email="park.ethan@u.northwestern.edu">ethan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>